--- a/teszt001.html
+++ b/teszt001.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>PHP test</title>
 </head>
 <body>
-próba test Webstorm 2018-04-29
+<?php phpinfo(); ?>
 </body>
 </html>
