--- a/teszt2.html
+++ b/teszt2.html
@@ -1,3 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>PHP test</title>
+</head>
+<body>
+PHP test<br>
+<?php phpinfo(); ?>
+
+
+
 <div class="row">
 	teszt2018
 </div>
+
+</body>
+</html>
